# Copilot-For-Business

./: .coverage  .gitattributes  .gitignore  README.md  Sample  gpt_token_usage.txt  pyproject.toml  requirements.txt  requirements_dev.txt  restats  setup.cfg  tox.ini
.github/workflows/: tests.yml
Copilot_For_Business.egg-info/: PKG-INFO  SOURCES.txt
backend/: LLM_utils.py  test.py
backend/sql_generator_template/: sql_generator.py
backend/utils/: .env  database.py  gpt.py
databases/: Events_Group.sqlite3  Events_Group.sqlite3.json  Orders_Group.sqlite3  Orders_Group.sqlite3.json  completedclient.sqlite3  crm1  crm1.json  crm_refined.sqlite3  crm_refined.sqlite3.json  crm_refined_droppedtable.sqlite3  crm_refined_droppedtable.sqlite3.json  note.txt  simplefolks.sqlite
frontend/: Welcome.py  development.py
frontend/pages/: 1_Dashboard.py
legacy/databases/: crm1.json  crm_refined_droppedtable.sqlite3.json
sciagraph-result/2024-03-01T21-17-57_233703/: index.html  peak-memory.prof  performance.prof  report.json
sciagraph-result/2024-03-01T21-17-57_233703/performance/: nativethreads-1.json  nativethreads-2.json
src/Copilot_For_Business.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/backend/: actioner.py  classifier.py  copilot.py  database.py  generalised_answer.py  generator.py  migration.ipynb  sql_generator_template.py  test.py
src/backend/sql/: generator.py  generator_template.py
src/backend/utils/: clean_name.py  database.py  db_importer.py  dbmaker.py  early_analysis.py  formatSQL.py  gpt.py  sessions.py  vector.py  visualiser.py
src/backend/visualisation/: BarChart.py  LineChart.py  NoChart.py  PieChart.py  ScatterChart.py  Visualisation.py  __init__.py  visualisationclass.py
src/frontend/: Welcome.py  development.py
src/frontend/pages/: 1_Dashboard.py  2_Chat.py  2_Copilot_For_Business.py  3_Help.py  3_chatgpt.py  4_Help.py  workflow.py
src/sql_generator/: sql_generator_template.py
src/visualisation/: visualisationclass.py
tests/: actioner_test.py  db_test.py  dummy_test.py  sql_generator_test.py  test_actioner.py  test_database.py  test_dummy.py  test_generalised_answer.py  test_sql_generator.py
tests/backend/: test_dummy.py
tests/backend/sql/: generator_test.py
tests/backend/utils/: test_database.py
tests/backend/visualisation/: test_visualisation.py  test_visualisationclass.py
uploads/: crm1.sqlite3.json  crm1_2.sqlite3.json  crm_refined.sqlite3.json  example_db.sqlite3.json
