[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
show_error_codes = true
no_implicit_reexport = true

