[metadata]
name = Copilot-For-Business
description = Copilot for Business
author = Echo
lisence = Cambridge
platforms = any
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:

python_requires = >=3.8
package_dir = 
    = src
zip_safe = False
include_package_data = True


[options.packages.find]
where=src

[options.extras_require]
testing = 
    flake8>=3.9
    tox>=3.23
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910

[flake8]
max-line-length = 160
