[metadata]
name = Copilot-For-Business
description = Copilot for Business
author = Echo
lisence = Cambridge
platforms = any
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Utilities

[options]

python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
package_dir = 
    =src

[options.packages.find]
where = src 




[options.extras_require]
testing = 
    flake8>=3.9
    tox>=3.23
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910

[flake8]
max-line-length = 160
